<resources>
    <string name="app_name">Hire</string>
    <string name="title_activity_fab">FabActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Manual Form-->
    <string name="example_name">Eg: Jackson Wang</string>
    <string name="example_phone">Eg: 1110235638</string>
    <string name="example_email">Eg: jackson@gmail.com</string>
    <string name="example_age">Eg: 21</string>
    <string name="example_address">Eg: No.16 Jalan Danau Kota, Taman Danao 12, 53300, Kuala Lumpur</string>
    <string name="example_skills">Eg: Java</string>
    <string name="example_education">Eg: Tunku Abdul Rahman University College</string>
    <string name="terms">I hereby agreed that all the information provided is real and authentic.</string>
    <string name="one">1</string>
    <string name="java">java</string>
    <string name="beginer">beginer</string>
    <string name="delete">delete</string>
    <string name="TARUC">Tunku Abdul Rahman University College</string>
    <string name="clearAll">Clear All</string>
    <string name="snackbar_delete">Successfully Cleared</string>
    <string name="undo">Undo</string>
    <string name="undo_success">Undo Successfully</string>
    <string name="name_empty_error">Name cannot be empty</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="phone_empty_error">Phone No. cannot be empty</string>
    <string name="age_empty_error">Age cannot be empty</string>
    <string name="address_empty_error">Address cannot be empty</string>
    <string name="numeric_phone_error">Phone No. must be numeric</string>
    <string name="numeric_age_error">Age must be numeric</string>
    <string name="email_format_error">Invalid email format</string>
    <string name="gender_error">Please select your gender</string>
    <string name="unchecked_TandC">Please agree your terms and conditions</string>
    <string name="error_input">Please provide the valid input</string>
    <string name="ask_resume">Do you have a resume?</string>
    <string name="upload_now">Upload now</string>
    <string name="upload_success">Uploaded Succesfully</string>
    <string name="upload_error">Uploaded Fail</string>
    <string name="no_skills">No skills</string>
    <string name="no_education">No educations</string>
    <string name="position">Position:</string>
    <string name="example_position">Eg: HR</string>
    <string name="empty_position">Position cannot be empty</string>
    <string name="say_cheese">Say Cheese</string>
    <string name="pick_photo">Pick a photo</string>
    <string name="invalid_phone_length">Invalid Phone No. Length</string>
    <string name="invalid_age">Invalid Age</string>

    <string-array name="level">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="phone">
        <item>+60</item>
        <item>+61</item>
        <item>+62</item>
        <item>+63</item>
        <item>+64</item>
        <item>+65</item>
    </string-array>

    <string-array name="position">
        <item>Employee</item>
        <item>Intern</item>
        <item>Manager</item>
        <item>Executive</item>
        <item>Others</item>
    </string-array>


    <!--Extracted Edit Fragemnt-->
    <string name="no_name_found">No name found</string>
    <string name="no_phone_found">No phone found</string>
    <string name="no_email_found">No email found</string>
    <string name="no_age_found">No age found</string>
    <string name="no_address_found">No address found</string>
    <string name="no_skills_found">No skills found</string>
    <string name="no_education_found">No education found</string>
    <string name="uploading_to_database">Uploading to Database</string>
    <string name="uploading">Uploading...</string>

    <!--Home Fragment/ Employee List-->
    <string name="recruit_option">Recruit Options</string>
    <string name="ai_recruit">A.I.</string>
    <string name="manual">Manual Form</string>
    <string name="confirmation_delete">Are you sure to delete all the employees?</string>
    <string name="confirmation_single_delete">Are you sure to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="delete_all">Delete All</string>
    <string name="deleting">Deleting...</string>
    <string name="deleted">deleted</string>
    <string name="all_deleted_sucess">Success Deleted All</string>
    <string name="no_employee">No Employee to be deleted</string>


    <!--Upload Fragment-->
    <string name="info">The process may take up to 20 second or more if your uploaded resume has too much of information to be processed.
    Please be patient while waiting for the result.</string>
    <string name="error_getting_response">Error getting response, Try again</string>
    <string name="no_face_detected">No Face Detected</string>
    <string name="could_not_set_up_face_detector">Could not set up Face Dectector</string>
    <string name="error_setting_up_text_recognizer">Error setting up Text Recognizer</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="error_crop">Error Cropping Image</string>
    <string name="no_internet">No Internet</string>
    <string name="extracting">Extracting...</string>
    <string name="upload_resume_first">Please Upload your resume first</string>
    <string name="choose_resume">Choose a resume</string>
    <string name="capture_resume">Capture the resume</string>
    <string name="face_detected">Face Detected</string>
    <string name="detecting_face">Detecting Face...</string>
    <string name="extracting_credentials">Extracting Credentials...</string>
    <string name="extracted_successfully">Extracted Successfully</string>



    <!-- Profile Fragment -->
    <string name="verified">verified account</string>
    <string name="unverified">click to verify</string>
    <string name="loading_resume">Loading Resume...</string>

    <!-- Saved Employee Fragment -->
    <string name="no_saved_employee">No Saved Employee</string>
    <string name="unsaved_all">Unsaved All</string>
    <string name="empty">Empty</string>

    <!-- Navigation drawer -->
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="home">Home</string>
    <string name="others">Others</string>
    <string name="aboutus">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="account">Account</string>
    <string name="logout">Log Out</string>
    <string name="confirmation_logout">Are you sure to log out?</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_success">Feedback successfully sent</string>
    <string name="example_feedback">Eg: Great App!!!</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="feedback_error">Feedback cannot be empty</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="contact_us">Contact Us</string>

    <!--Bottom Navigation Activity-->
    <string name="logged_out">Successfully Logged Out</string>

    <!--About Us-->
    <string name="purpose">Purpose</string>
    <string name="our_team">Our Team</string>
    <string name="hiring_become_simple">\" Hiring are now becoming simple and easy \" </string>
    <string name="team1_content">\" Always improving is our main objective. Nothing can stop us for improving our products
        and we will keep hiring talented people to produce the best products you ever used.\"</string>
    <string name="team1_title"> TEE YU JUNE\nCEO </string>
    <string name="team2_title">POH CHONG SIEN\nCFO </string>
    <string name="team2_content">\" This must the most high-tech hiring app you ever seen and it has help the worldwide employers
        to recruit their candidate in a very convenience and time-saving way. No more traditional way,
        only the smart way.\"</string>
    <string name="ending">\" Hire App, Makes Your Life Happy \"</string>
    <string name="explore_now">Explore Now</string>
    <string name="about_us_content">This is a hiring app which implemented with A.I technology to help you to hire
    the right one in a different way with shorter, faster time, and smarter way.</string>
    <string name="purpose_content"> Our mission is to make the hiring app worldwide and our vision is to be the
    top 5 hiring app in the next 5 years. We will keep implementing new technologies such as Blockchain into this app.</string>
    <string name="error_loading_images">Error loading images</string>

    <!--Contact Us-->
    <string name="taruc">Tunku Abdul Rahman University College</string>
    <string name="follow_us">Follow us</string>
    <string name="address">Address</string>
    <string name="address_content"> Kampus Utama, \nJalan Genting Kelang, \n53300 Kuala Lumpur, \nWilayah Persekutuan Kuala Lumpur </string>
    <string name="phone">Phone/Email</string>
    <string name="hours_open">Opening Hours</string>
    <string name="hours_open_content">Mon \  \: 10a.m. - 6p.m.\nTues \ : 10a.m. - 6p.m.\nWed \ \ : 10a.m. - 6p.m.\nThurs : 10a.m. - 6p.m.\nFri \ \ \ \ \ \ \: 9a.m. - 1p.m.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="recruit_options">
        <item>Manually Form</item>
        <item>A.I. Resume Extraction</item>
    </string-array>

    <string-array name="take_photo_options">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_contact_us">Map</string>

</resources>
