<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewHolderSkillsPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/one"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHolderSkillsSkills"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/java"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHolderSkillsPosition"
        app:layout_constraintEnd_toStartOf="@+id/textViewHolderSkillsLevel"
        app:layout_constraintStart_toEndOf="@+id/textViewHolderSkillsPosition"
        app:layout_constraintTop_toTopOf="@+id/textViewHolderSkillsPosition" />

    <TextView
        android:id="@+id/textViewHolderSkillsLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/beginer"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHolderSkillsSkills"
        app:layout_constraintEnd_toStartOf="@+id/buttonHolderSkillsDelete"
        app:layout_constraintTop_toTopOf="@+id/textViewHolderSkillsSkills" />

    <Button
        android:id="@+id/buttonHolderSkillsDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHolderSkillsLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHolderSkillsLevel" />
</androidx.constraintlayout.widget.ConstraintLayout>