<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs"
    android:orientation="vertical">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbarAboutUs"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#FFFFFF"
    android:minHeight="?attr/actionBarSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        app:srcCompat="@drawable/hire_logo" />

</androidx.appcompat.widget.Toolbar>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >


                    <TextView
                        android:id="@+id/textViewAboutUsTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/hiring_become_simple"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/imageViewAboutUs"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsTitle"
                        app:srcCompat="@drawable/error" />

                    <TextView
                        android:id="@+id/textViewAboutUsSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/aboutus"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/imageViewAboutUs"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewAboutUs" />

                    <TextView
                        android:id="@+id/textViewAboutUsSubtitleContent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/about_us_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textViewAboutUsSubtitle"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsSubtitle" />

                    <TextView
                        android:id="@+id/textViewAboutUsPurpose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/purpose"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textViewAboutUsSubtitleContent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsSubtitleContent" />

                    <TextView
                        android:id="@+id/textViewAboutUsPurposeContent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/purpose_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/textViewAboutUsPurpose"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsPurpose" />

                    <TextView
                        android:id="@+id/textViewAboutUsTeam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/our_team"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/textViewAboutUsPurposeContent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsPurposeContent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/team1Constraint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/background_extracted_text"
                        android:elevation="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsTeam">


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageViewTeam1"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_person" />

                        <TextView
                            android:id="@+id/textViewTeam1Content"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/team1_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageViewTeam1"
                            app:layout_constraintTop_toTopOf="@+id/imageViewTeam1" />

                        <TextView
                            android:id="@+id/textViewTeam1Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/team1_title"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/imageViewTeam1"
                            app:layout_constraintStart_toStartOf="@+id/imageViewTeam1"
                            app:layout_constraintTop_toBottomOf="@+id/imageViewTeam1" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/team2Constraint"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/background_extracted_text"
                        android:elevation="5dp"
                        app:layout_constraintBottom_toTopOf="@+id/textViewAboutUsEnding"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/team1Constraint">


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imageViewTeam2"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_person" />

                        <TextView
                            android:id="@+id/textViewTeam2Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/team2_title"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/imageViewTeam2"
                            app:layout_constraintStart_toStartOf="@+id/imageViewTeam2"
                            app:layout_constraintTop_toBottomOf="@+id/imageViewTeam2" />

                        <TextView
                            android:id="@+id/textViewTeam2Content"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/team2_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageViewTeam2"
                            app:layout_constraintTop_toTopOf="@+id/imageViewTeam2" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textViewAboutUsEnding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/ending"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/team2Constraint" />

                    <Button
                        android:id="@+id/buttonAboutUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/explore_now"
                        android:background="@drawable/circle_text_view"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/white"
                        android:padding="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/textViewAboutUsEnding"
                        app:layout_constraintStart_toStartOf="@+id/textViewAboutUsEnding"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAboutUsEnding" />

                </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </LinearLayout>
